<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="eventHandler"
            type="company.surious.coronovirusobserver.presentation.ui.components.fragments.status.StatusFragment.StatusEventHandler" />

        <variable
            name="stateModel"
            type="company.surious.coronovirusobserver.presentation.ui.components.fragments.status.StatusState" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        onRefresh="@{()->eventHandler.onSwipeToRefresh()}"
        refreshing="@{stateModel.isLoading}"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/statusContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/infectedCardView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="@{()->eventHandler.onConfirmedClick()}"
                    app:cardBackgroundColor="@color/colorDarkGray"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintBottom_toTopOf="@id/deadCardView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/total_confirmed"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/labelMediumFontSize" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:text="@{`` + stateModel.infected}"
                            android:textColor="@color/colorWhite"
                            android:textSize="@dimen/numberBigFontSize"
                            tools:text="1111" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/deadCardView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:onClick="@{()->eventHandler.onDeathsClick()}"
                    app:cardBackgroundColor="@color/colorDarkGray"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/recoveredCardView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/infectedCardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/total_deaths"
                            android:textColor="@color/colorRed"
                            android:textSize="@dimen/labelSmallFontSize" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:gravity="top"
                            android:text="@{`` + stateModel.dead}"
                            android:textColor="@color/colorRed"
                            android:textSize="@dimen/numberSmallFontSize"
                            tools:text="1111" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/recoveredCardView"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:onClick="@{()->eventHandler.onRecoveredClick()}"
                    app:cardBackgroundColor="@color/colorDarkGray"
                    app:cardCornerRadius="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/deadCardView"
                    app:layout_constraintTop_toTopOf="@id/deadCardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/total_recovered"
                            android:textColor="@color/colorGreen"
                            android:textSize="@dimen/labelSmallFontSize" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:gravity="top"
                            android:text="@{`` + stateModel.recovered}"
                            android:textColor="@color/colorGreen"
                            android:textSize="@dimen/numberSmallFontSize"
                            tools:text="1111" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/statusProgressBarContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4DFFFFFF"
                android:visibility="@{stateModel.isLoading}" />
        </FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>